改为使用 jsoup 进行 html 的解析

--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,13 @@
             <version>RELEASE</version>
         </dependency>
 
+        <dependency>
+            <!-- jsoup HTML parser library @ http://jsoup.org/ -->
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 </project>
