完成医院列表的遍历

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -32,6 +32,10 @@ akka {
 
   remote {
     # The port clients should connect to. Default is 2552.
-    netty.tcp.port = 4711
+    enabled-transports = ["akka.remote.netty.tcp"]
+    netty.tcp {
+      hostname = "127.0.0.1"
+      port = 4711
+    }
   }
 }
